--- a/addpost/index.html
+++ b/addpost/index.html
@@ -4,17 +4,16 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Add Post</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js" defer></script>
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js" defer></script>
+    </script>
 </head>
 
 <body>
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="text/javascript">
-
-    </script>
     <div class="container">
         <div class="profile-page tx-13">
             <div class="row">
@@ -85,8 +84,6 @@
                         </div>
                     </div>
                 </div>
-
-
                 <div class="d-none d-xl-block col-xl-3 right-wrapper">
                     <div class="row">
                         <div class="col-md-12 grid-margin">
@@ -96,76 +93,9 @@
                 </div>
             </div>
         </div>
-</body>
-
 <script src="/js/main.js"></script>
 <script src="/api/request.js"></script>
-<script type="text/javascript">
-    const endpoint = "posts";
-    const method = "POST";
-
-    let token = window.localStorage.getItem("accessToken");
-
-    function errorMessage(type, err)
-    {
-        return `<div class="alert ${type}" role="alert">${err}</div>`
-    }
-
-    document.getElementById('registerform').addEventListener("submit", async (e) =>
-    {
-        document.getElementById("register_error").innerHTML = ""
-        e.preventDefault()
-        const formData = new FormData(e.target);
-        const newPostData = Object.fromEntries(formData.entries());
-
-        const { postTitle, postBody, postTags } = newPostData;
-        const createPostOptions = {
-            method,
-            body: JSON.stringify({
-                title: postTitle,
-                body: postBody,
-                tags: [postTags],
-            }),
-            headers: {
-                "Content-type": "application/json; charset=UTF-8",
-                Authorization: `Bearer ${JSON.parse(token)}`,
-            },
-        };
-        const response = await fetch(BASE_URL + endpoint, createPostOptions);
-
-        try
-        {
-            const result = await response.json();
-            if (result?.statusCode)
-            {
-                let error = result.errors[0].message ? result.errors[0].message : "Something went wrong"
-                document.getElementById("register_error").innerHTML = errorMessage("alert-danger", error)
-            } else
-            {
-                document.getElementById("register_error").innerHTML = errorMessage("alert-success", "Post Created Success")
-                setTimeout(() =>
-                {
-                    window.location = "/"
-                }, 500)
-            }
-
-            //redirectToPostFeed(token);
-        } catch (error)
-        {
-            //document.getElementById("register_error").innerHTML = errorMessage("alert-danger", error)
-            document.getElementById("register_error").innerHTML = errorMessage("alert-danger", error)
-            return
-        }
-
-        //login(profile);
-    })
-
-
-
-
-</script>
-<script src="/api/request.js"></script>
-
+<script src="addpost.js" type="text/javascript"></script>
+</body>
 </html>
-
 </html>
