--- a/deletepost/index.html
+++ b/deletepost/index.html
@@ -4,17 +4,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Delete</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/style.css" rel="stylesheet">
-</head>
-
-<body>
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="text/javascript">
-
+    <link href="css/style.css" rel="stylesheet">
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js" defer></script>
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js" defer></script>
     </script>
+</head>
+<body>
     <div class="container">
         <div class="profile-page tx-13">
             <div class="row">
@@ -26,9 +24,7 @@
                 <div class="d-none d-md-block col-md-4 col-xl-3 left-wrapper">
 
                 </div>
-
-
-                <div class="col-md-8 col-xl-6 middle-wrapper">
+            <div class="col-md-8 col-xl-6 middle-wrapper">
                     <div class="row">
 
                         <div class="col-md-12">
@@ -44,77 +40,16 @@
                         </div>
                     </div>
                 </div>
-
-
                 <div class="d-none d-xl-block col-xl-3 right-wrapper">
                     <div class="row">
                         <div class="col-md-12 grid-margin">
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
-</body>
 <script src="/api/request.js"></script>
 <script src="/js/main.js"></script>
-
-<script>
-
-
-    let GlobalPost = [];
-    const method = "POST";
-    let timer = null
-
-    function getQueryParams()
-    {
-        var queryParams = {};
-        var searchParams = new URLSearchParams(window.location.search);
-
-        for (var pair of searchParams.entries())
-        {
-            var key = decodeURIComponent(pair[0]);
-            var value = decodeURIComponent(pair[1] || "");
-            queryParams[key] = value;
-        }
-
-        return queryParams;
-    }
-
-    async function deletePostData(token)
-    {
-        let { post_id } = getQueryParams()
-        const endpoint = `posts/${post_id}`;
-        const method = "DELETE";
-        const options = {
-            method,
-            headers: {
-                "Content-type": "application/json; charset=UTF-8",
-                Authorization: `Bearer ${JSON.parse(token)}`,
-            },
-        };
-        document.getElementById("post_loader").classList.remove("d-none")
-        await fetch(`${BASE_URL}${endpoint}`, options)
-            .then((response) => response.json())
-            .then((data) =>
-            {
-                document.getElementById("post_container").innerHTML = `post id ${post_id} was deleted`;
-                setTimeout(() => window.location = "/", 400)
-            });
-        document.getElementById("post_loader").classList.add("d-none")
-    }
-    let token = window.localStorage.getItem("accessToken");
-
-
-    deletePostData(token)
-
-
-
-
-
-
-
-
-</script>
-
+<script src="delete.js"></script>
+</body>
 </html>
