--- a/login/index.html
+++ b/login/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../css/style.css" rel="stylesheet">
-
+    <link href="css/style.css" rel="stylesheet">
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js" defer></script>
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js" defer></script>
+    </script>
 </head>
 
 <body>
@@ -40,94 +42,8 @@
             </form>
         </div>
     </div>
+<script src="/api/request.js"></script>
+<script src="login.js" type="text/javascript"></script>
 </body>
-
-<script src="/api/request.js"></script>
-<script type="text/javascript">
-
-
-    const endpoint = "auth/login";
-    const method = "POST";
-
-
-
-    function errorMessage(type, err)
-    {
-        return `<div class="alert ${type}" role="alert">${err}</div>`
-    }
-
-    document.getElementById('registerform').addEventListener("submit", async (e) =>
-    {
-        document.getElementById("register_error").innerHTML = ""
-        e.preventDefault()
-        const formData = new FormData(e.target);
-        const body = Object.fromEntries(formData.entries());
-        const response = await fetch(BASE_URL + endpoint, {
-            headers: {
-                "Content-Type": "application/json",
-            },
-            method,
-            body: JSON.stringify(body),
-        });
-
-        try
-        {
-            const result = await response.json();
-            console.log({ result })
-            if (result?.statusCode)
-            {
-                let error = result.errors[0].message ? result.errors[0].message : "Something went wrong"
-                document.getElementById("register_error").innerHTML = errorMessage("alert-danger", error)
-            } else
-            {
-                const token = localStorage.setItem(
-                    "accessToken",
-                    JSON.stringify(result.accessToken)
-                );
-                localStorage.setItem("username", JSON.stringify(result.email));
-                document.getElementById("register_error").innerHTML = errorMessage("alert-success", "Login was success , redirecting to posts")
-                setTimeout(() =>
-                {
-                    window.location = "/"
-                }, 500)
-            }
-
-            //redirectToPostFeed(token);
-        } catch (error)
-        {
-            //document.getElementById("register_error").innerHTML = errorMessage("alert-danger", error)
-            document.getElementById("register_error").innerHTML = errorMessage("alert-danger", error)
-            return
-        }
-
-        //     method,
-        //     body: JSON.stringify(newUser),
-        //     headers: {
-        //         "Content-type": "application/json; charset=UTF-8",
-        //     },
-        // };
-        // try
-        // {
-        //     let respose = await sendRequest(endpoint, registerOptions)
-        //     console.log(respose)
-        //     document.getElementById("register_error").innerHTML = errorMessage("alert-success", "user creation was success , redirecting to login page")
-        //     // setTimeout(() =>
-        //     // {
-        //     //     window.location = "/login/"
-        //     // }, 1000)
-        // } catch (error)
-        // {
-        //     document.getElementById("register_error").innerHTML = errorMessage("alert-danger", error.message)
-        // }
-
-        //console.log(newUser)
-        //login(profile);
-    })
-
-
-
-
-</script>
-<script src="/api/request.js"></script>
 
 </html>
