--- a/register/index.html
+++ b/register/index.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../css/style.css" rel="stylesheet">
-
+    <link href="css/style.css" rel="stylesheet">
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js" defer></script>
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js" defer></script>
+    </script>
 </head>
-
 <body>
     <div id="root">
-
-
         <div class="w-50 h-50 center_form">
             <div id="register_error">
 
@@ -46,50 +46,7 @@
             </form>
         </div>
     </div>
-</body>
-<script src="/api/request.js"></script>
-<script type="text/javascript">
-    const endpoint = "auth/register";
-    const method = "POST";
-    function errorMessage(type, err)
-    {
-        return `<div class="alert ${type}" role="alert">${err}</div>`
-    }
-
-    document.getElementById('registerform').addEventListener("submit", async (e) =>
-    {
-        document.getElementById("register_error").innerHTML = ""
-        e.preventDefault()
-        const formData = new FormData(e.target);
-        const newUser = Object.fromEntries(formData.entries());
-        const registerOptions = {
-            method,
-            body: JSON.stringify(newUser),
-            headers: {
-                "Content-type": "application/json; charset=UTF-8",
-            },
-        };
-        try
-        {
-            let respose = await sendRequest(endpoint, registerOptions)
-            document.getElementById("register_error").innerHTML = errorMessage("alert-success", "user creation was success , redirecting to login page")
-            setTimeout(() =>
-            {
-                window.location = "/login/"
-            }, 1000)
-        } catch (error)
-        {
-            document.getElementById("register_error").innerHTML = errorMessage("alert-danger", error.message)
-        }
-
-        console.log(newUser)
-        //login(profile);
-    })
-
-
-
-
-</script>
-<script src="/api/request.js"></script>
-
+    <script src="/api/request.js"></script>
+    <script src="register.js" type="text/javascript"></script>
+</body>    
 </html>
