--- a/updatepost/index.html
+++ b/updatepost/index.html
@@ -4,24 +4,23 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Update Post</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/style.css" rel="stylesheet">
-</head>
-
-<body>
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="text/javascript">
-
+    <link href="css/style.css" rel="stylesheet">
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js" defer></script>
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js" defer></script>
     </script>
+    <script type="text/javascript">
+    </script>
+</head>
+<body>
     <div class="container">
         <div class="profile-page tx-13">
             <div class="row">
                 <div class="col-12 grid-margin">
                     <div class="profile-header">
                         <div class="cover">
-
                             <div class="cover-body d-flex justify-content-between align-items-center">
                                 <div>
                                     <img class="profile-pic" src="https://bootdey.com/img/Content/avatar/avatar6.png"
@@ -29,21 +28,16 @@
                                     <span class="profile-name">Amiah Burton</span>
                                 </div>
                                 <div class="d-none d-md-block">
-
                                 </div>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
             <div class="row profile-body">
 
                 <div class="d-none d-md-block col-md-4 col-xl-3 left-wrapper">
-
                 </div>
-
-
                 <div class="col-md-8 col-xl-6 middle-wrapper">
                     <div class="row">
 
@@ -54,8 +48,6 @@
                                     <span class="sr-only">Loading...</span>
                                 </div>
                             </div>
-
-
                             <div class="w-100 h-50 mt-3">
                                 <div id="register_error">
 
@@ -87,8 +79,6 @@
                         </div>
                     </div>
                 </div>
-
-
                 <div class="d-none d-xl-block col-xl-3 right-wrapper">
                     <div class="row">
                         <div class="col-md-12 grid-margin">
@@ -98,91 +88,8 @@
                 </div>
             </div>
         </div>
-</body>
-
 <script src="/js/main.js"></script>
 <script src="/api/request.js"></script>
-<script type="text/javascript">
-    const endpoint = "posts";
-    const method = "PUT";
-
-    let token = window.localStorage.getItem("accessToken");
-
-    function errorMessage(type, err)
-    {
-        return `<div class="alert ${type}" role="alert">${err}</div>`
-    }
-    function getQueryParams()
-    {
-        var queryParams = {};
-        var searchParams = new URLSearchParams(window.location.search);
-
-        for (var pair of searchParams.entries())
-        {
-            var key = decodeURIComponent(pair[0]);
-            var value = decodeURIComponent(pair[1] || "");
-            queryParams[key] = value;
-        }
-
-        return queryParams;
-    }
-
-    document.getElementById('registerform').addEventListener("submit", async (e) =>
-    {
-        document.getElementById("register_error").innerHTML = ""
-        e.preventDefault()
-        const formData = new FormData(e.target);
-        const newPostData = Object.fromEntries(formData.entries());
-
-        let { post_id } = getQueryParams()
-        const { postTitle, postBody, postTags } = newPostData;
-        const createPostOptions = {
-            method,
-            body: JSON.stringify({
-                title: postTitle,
-                body: postBody,
-                tags: [postTags],
-            }),
-            headers: {
-                "Content-type": "application/json; charset=UTF-8",
-                Authorization: `Bearer ${JSON.parse(token)}`,
-            },
-        };
-        const response = await fetch(`${BASE_URL}${endpoint}/${post_id}?_author=true&_reactions=true&_comments=true`, createPostOptions);
-
-        try
-        {
-            const result = await response.json();
-            if (result?.statusCode)
-            {
-                let error = result.errors[0].message ? result.errors[0].message : "Something went wrong"
-                document.getElementById("register_error").innerHTML = errorMessage("alert-danger", error)
-            } else
-            {
-                document.getElementById("register_error").innerHTML = errorMessage("alert-success", "Post updated Success")
-                setTimeout(() =>
-                {
-                    window.location = "/"
-                }, 500)
-            }
-
-            //redirectToPostFeed(token);
-        } catch (error)
-        {
-            //document.getElementById("register_error").innerHTML = errorMessage("alert-danger", error)
-            document.getElementById("register_error").innerHTML = errorMessage("alert-danger", error)
-            return
-        }
-
-        //login(profile);
-    })
-
-
-
-
-</script>
-<script src="/api/request.js"></script>
-
-</html>
-
+<script src="updatepost.js" type="javascript"></script>
+</body>
 </html>
